--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hexo-generator-search": "^2.4.1",
     "hexo-generator-searchdb": "^1.3.3",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-generator-topindex": "^0.3.0",
     "hexo-related-popular-posts": "^5.0.1",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^3.0.0",
