--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -178,13 +178,13 @@ site_state: true
 # Key is the link label showing to end users.
 # Value before `||` delimiter is the target permalink, value after `||` delimiter is the name of Font Awesome icon.
 social:
-  GitHub: https://github.com/Azure33 || github
-  E-Mail: mailto:515634453@qq.com || envelope
+  GitHub: https://github.com/ericlee33 || github
+  E-Mail: mailto:ericfly33@gmail.com || envelope
   #Weibo: https://weibo.com/yourname || weibo
   #Google: https://plus.google.com/yourname || google
   #Twitter: https://twitter.com/yourname || twitter
   #FB Page: https://www.facebook.com/yourname || facebook
-  #StackOverflow: https://stackoverflow.com/yourname || stack-overflow
+  StackOverflow: https://stackoverflow.com/users/14472362/eric-lee || stack-overflow
   #YouTube: https://youtube.com/yourname || youtube
   #Instagram: https://instagram.com/yourname || instagram
   #Skype: skype:yourname?call|chat || skype
@@ -202,7 +202,7 @@ links_settings:
   layout: block
 
 links:
-  Github: https://github.com/Azure33
+  Github: https://github.com/ericlee33
 
 # Table of Contents in the Sidebar
 # Front-matter variable (unsupport wrap expand_all).
@@ -277,7 +277,7 @@ reward:
 # Usage: `Key: permalink || icon` (Font Awesome)
 follow_me:
   #Twitter: https://twitter.com/username || twitter
-  # github: https://github.com/Azure33 || github
+  github: https://github.com/ericlee33 || github
   #Telegram: https://t.me/channel_name || telegram
   #WeChat: /images/wechat_channel.jpg || wechat
   #RSS: /atom.xml || rss
@@ -393,7 +393,7 @@ bookmark:
 # `Follow me on GitHub` banner in the top-right corner.
 github_banner:
   enable: true
-  permalink: https://github.com/Azure33
+  permalink: https://github.com/ericlee33
   title: Follow me on GitHub
 
 
