--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: https://azure33.gitee.io/
+url:  https://ericlee33.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -104,9 +104,9 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://gitee.com/azure33/azure33.git
+  repo: git@github.com:ericlee33/ericlee33.github.io.git
   branch: master
-  message: update
+  message: add new articles
 
 search:
   path: search.xml
