--- a/_config.yml
+++ b/_config.yml
@@ -104,8 +104,8 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@github.com:ericlee33/ericlee33.github.io.git
-  branch: master
+  repo: https://github.com/ericlee33/ericlee33.github.io.git
+  branch: gh-pages
   message: add new articles
 
 search:
