--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -123,7 +123,10 @@ menu:
   tags: /tags/ || tags
   about: /about/ || user
   # schedule: /schedule/ || calendar
-  # sitemap: /sitemap.xml || sitemap
+  # sitemap:
+  #   path: sitemap.xml
+  # baidusitemap:
+  #   path: baidusitemap.xml
   # commonweal: /404/ || heartbeat
 
 # Enable / Disable menu icons / item badges.
